# slotted-egraphs

./: Cargo.toml  README.md
.github/workflows/: bencher_base.yml  bencher_pr.yml  rust.yml  tests.yml
benches/: one.rs  sdql.rs
plan/: egraph  pseudocode  suf
plan/explain/: egraph  egraph.rs  suf  suf.rs
slotted-egraphs-derive/: Cargo.toml
slotted-egraphs-derive/src/: lib.rs
src/: access.rs  applied.rs  apply_map.rs  core.rs  debug.rs  group.rs  lang.rs  lib.rs  parse.rs  rename.rs  slot.rs  slotmap.rs  slotmap_like.rs  suf.rs  types.rs
src/egraph/: add.rs  analysis.rs  check.rs  core.rs  find.rs  mod.rs  rebuild.rs  union.rs
src/egraph/expl/: front.rs  mock.rs  mod.rs  proof.rs  show.rs
src/egraph/expl/wrapper/: applied_id.rs  contains.rs  mod.rs  node.rs  perm.rs  source_node.rs
src/explain/: flat.rs  front.rs  mock.rs  mod.rs  proof.rs  registry.rs  show.rs
src/explain/wrapper/: applied_id.rs  contains.rs  mod.rs  node.rs  perm.rs  source_node.rs
src/extract/: cost.rs  mod.rs  with_ord.rs
src/group/: mod.rs  perm.rs  tst.rs
src/pattern/: ematch.rs  pattern_subst.rs  rewrite.rs
src/rewrite/: ematch.rs  flat.rs  machine.rs  mod.rs  pattern.rs  rewrite.rs  subst_method.rs
src/run/: mod.rs  report.rs  run.rs  runner.rs
src/segraph/: core.rs  mod.rs
src/slotmap/: like.rs  mod.rs  rename.rs  rf.rs
suf/: Cargo.toml
suf/src/: group.rs  lib.rs  plan  registry.rs  slot.rs  slotmap.rs  suf.rs  tst.rs  types.rs
tests/: entry.rs
tests/arith/: const_prop.rs  mod.rs  my_cost.rs  rewrite.rs  tst.rs
tests/array/: mod.rs  my_cost.rs  parse.rs  rewrite.rs  tst.rs
tests/fgh/: mod.rs
tests/i_arith/: mod.rs  rewrite.rs  tst.rs
tests/i_array/: tst.rs
tests/i_lambda/: big_step.rs  parse.rs  small_step.rs
tests/i_let/: rewrite.rs  tst.rs
tests/i_main/: mod.rs
tests/i_rise/: mod.rs  rewrite.rs  tst.rs
tests/i_symbol/: tst.rs
tests/lambda/: big_step.rs  build.rs  lambda_small_step.rs  let_small_step.rs  mod.rs  my_cost.rs  native.rs  normalize.rs  realization.rs  small_step.rs  step.rs  subst.rs  tst.rs
tests/lamcalc/: build.rs  display.rs  gen.rs  mod.rs  normalize.rs  parse.rs  realization.rs  step.rs  tst.rs
tests/langs/: mod.rs
tests/langs/arith/: mod.rs  rewrite.rs
tests/langs/array/: rewrite.rs
tests/langs/fgh/: mod.rs
tests/langs/lambda/: big_step.rs
tests/langs/rise/: mod.rs  rewrite.rs
tests/misc/: mod.rs
tests/rise/: mod.rs  my_cost.rs  rewrite.rs  tst.rs
tests/sdql/: mod.rs  rewrite.rs
tests/small/: mod.rs
tests/sym/: mod.rs  tst.rs
tests/var/: mod.rs
