[package]
name = "slotted-egraphs"
version = "0.0.34"
edition = "2021"
description = "E-Graphs with name binding"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/memoryleak47/slotted-egraphs/"

[features]
checks = []
deferred = []
explanations = []
trace = ["tracing/max_level_trace", "tracing/release_max_level_trace", "tracing"]

[package.metadata.docs.rs]
features = ["explanations"]

[dependencies]
#slotted-egraphs-derive = "=0.0.34"
slotted-egraphs-derive = { path = "slotted-egraphs-derive" }
tracing = { version = "0.1", features = ["attributes"], optional = true }
symbol_table = { version = "0.3", features = ["global"] }
fxhash = "0.2.1"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
debug = true
