[package]
name = "slotted-egraphs"
version = "0.0.34"
edition = "2021"
description = "E-Graphs with name binding"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/memoryleak47/slotted-egraphs/"

[features]
explanations = []
checks = []
trace = [
  "tracing/max_level_trace",
  "tracing/release_max_level_trace",
  "tracing",
]

[package.metadata.docs.rs]
features = ["explanations"]

[dependencies]
#slotted-egraphs-derive = "=0.0.34"
slotted-egraphs-derive = { path = "slotted-egraphs-derive" }
tracing = { version = "0.1", features = ["attributes"], optional = true }
symbol_table = { version = "0.3", features = ["global"] }
rustc-hash = "2.1.1"
vec-collections = "0.4.3"
smallvec = "1.14.0"

[dev-dependencies]
divan = { version = "2.8.1", package = "codspeed-divan-compat" }
rand = "0.8.5"

# [profile.release]
# debug = true # for profiling. todo: is there a 

[[bench]]
name = "sdql"
harness = false
