[package]
name = "slotted-egraphs"
version = "0.0.34"
edition = "2021"
description = "E-Graphs with name binding"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/memoryleak47/slotted-egraphs/"

[features]
explanations = []
checks = []
profile = []

[package.metadata.docs.rs]
features = ["explanations"]

[dependencies]
#slotted-egraphs-derive = "=0.0.34"
slotted-egraphs-derive = { path = "slotted-egraphs-derive" }
symbol_table = { version = "0.3", features = ["global"] }
rustc-hash = "2.1.1"
vec-collections = "0.4.3"
smallvec = "1.14.0"
indexmap = "2.9.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8.5"

[profile.bench]
debug = true

[[bench]]
name = "sdql"
harness = false
